# qudi-hira-analysis

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  Compilation.ipynb  ExampleNotebook.ipynb  ExampleNotebook2.ipynb  LICENSE  README.md  Untitled.ipynb  conda-environment.yml  conda_install_script.txt  copy.bat  data_environment.yml  jlab.sh  jnote.sh  parameters-example.py  parameters.py  pyproject.toml
.github/workflows/: cross-platform-unittest.yml  python-app.yml  unittest.yml
develop/: 20200818_Akiyama_AFM.ipynb  20200818_Akiyama_AFM.md  20200820_Filter_Test.ipynb  20200820_Filter_Test.md  20200930_Diamond_nanopillar_AFM.ipynb  20201009_FirstPumpdown.ipynb  AFM_data.ipynb  matplotlibrc
docs/: index.html
docs/qudi_hira_analysis/: analysis_logic.html  data_handler.html  helper_functions.html  index.html  io_handler.html  measurement_dataclass.html
notebooks/: 171120_9002_NC60_LT.ipynb  180504_NC60_EPR_CHROMATOGRAM_OSNABRUCK.ipynb  20190802_MW_Transmission.ipynb  20200818_Akiyama_AFM.ipynb  20200818_Akiyama_AFM.md  20200820_Filter_Test.ipynb  20200917_Commercial_AFM_Diamond_pillars.ipynb  20200930_Diamond_nanopillar_AFM.ipynb  20201009_FirstPumpdown.ipynb  20201019_Magnet_Ramping.ipynb  20201022_SecondPumpdown.ipynb  20201030_Bakeout.ipynb  20201124_ThirdPumpdown.ipynb  20201217_FirstCooldown.ipynb  20201230_HeatLoad.ipynb  20210301_Fibonacci.ipynb  20210316_MagnetCooldown.ipynb  20210624_TipOpticalAlignment_FR03-2R3.ipynb  20210805_RTStageTestingTip8.ipynb  20210816_RTStageTesting_MW_MembraneSample.ipynb  20210816_RTStageTesting_MW_MembraneSample_ContinuousTesting.ipynb  20211012_MW_cabling_testing.ipynb  20211025_UHVTesting_MembraneSample.ipynb  20211116_FR0612-3G18_RT.ipynb  20211116_MW_cabling_testing.ipynb  20211124_Laser_Testing.ipynb  20211208_Membrane_RT.ipynb  20220112_SingleNV_Membrane_RT.ipynb  20220405_FR0612-F2-3C2.ipynb  20220405_FR0612-F2-3G6.ipynb  20220505_FR0612-F2-3B6_uhv.ipynb  20220804_FR0612-F2-3B6_uhv_new_objective.ipynb  20220819_FR03-2K14_rt_attocube_objective.ipynb  20221021_FR0612-F2-3B6_pcb_UHVstage_StandardGeometry.ipynb  20221027_FR0612-F2-3B6_PCB_UHVstage_StandardGeometry_PassiveDampers_STR10.ipynb  20221124_FR0612-F2-2R16_PCB_UHVstage.ipynb  20221130_FR0612-F2-2R16_PCB_UHVstage_rotated.ipynb  20221206_FR0612-F2-2R16_PCB_UHVstage_rotated.ipynb  Makefile  Miscellneous.ipynb  (+3 more)
qudi_hira_analysis/: __init__.py  _qudi_fit_logic.py  _raster_odmr_fitting.py  _version.py  analysis_logic.py  data_handler.py  helper_functions.py  io_handler.py  measurement_dataclass.py  qudi_fit_logic.py  raster_odmr_fitting.py
qudi_hira_analysis/_fitmethods/: antibunchingmethods.py  decaylikemethods.py  gaussianlikemethods.py  generalmethods.py  hyperbolicsaturationmethods.py  linearmethods.py  lorentzianlikemethods.py  poissonianlikemethods.py  sinemethods.py
qudi_hira_analysis/fitmethods/: gaussianlikemethods.py  generalmethods.py  hyperbolicsaturationmethods.py  lorentzianlikemethods.py  poissonianlikemethods.py
src/: additional_analysis_logic.py  additional_fit_methods.py  analysis_logic.py  data_handler.py  fit_logic.py  fitting.py  generic_io.py  helper_functions.py  helpers.py  io.py  io_handler.py  loader.py  measurement_dataclass.py  path_handler.py  preprocessing.py  pulsed_dataclass.py  qudi_fit_logic.py  qudi_fit_wrapper.py  vector_field.py
src/fitmethods/: antibunchingmethods.py  autocorrelationmethods.py  decaylikemethods.py  gaussianlikemethods.py  generalmethods.py  hyperbolicsaturationmethods.py  linearmethods.py  lorentzianlikemethods.py  poissonianlikemethods.py  sinemethods.py
tests/: test_fitting.py  test_helpers.py  test_loading.py
tests/data/: 03241256_lift15nm_210mV_15um_1Hz.001  4mw_ndmin_270k_30s.pys  Scan001.sxm  saturation_curve.xlsx  temperature-monitoring14_LN2.xls
tools/: conda-env-macm1.yml  conda-env-osx-apple-silicon.yml  conda-env-osx-intel.yml  conda-env-win10.yml  conda-env.yml  conda-environment.yml  copy.bat  remove_empty_data_folders.py
