[tool.poetry]
name = "qudi-hira-analysis"
version = "1.4.7"
repository = "https://github.com/dineshpinto/qudi-hira-analysis"
homepage = "https://github.com/dineshpinto/qudi-hira-analysis"
keywords = ["python", "qubit", "analysis", "nv centers", "photon timetrace"]
description = "A Python toolkit to analzye photon timetrace data from qubit sensors"
authors = ["dineshpinto <annual.fallout_0z@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "qudi_hira_analysis" }]

[tool.poetry.dependencies]
python = "^3.10"
lmfit = "^1.1.0"
matplotlib = "^3.6.2"
numpy = "^1.24.0"
pandas = "^2.0.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
tqdm = "^4.64.1"
pyspm = "^0.3.0"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
jupyterlab = "^3.6.2"
notebook = "^6.5.4"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
